Fixed Spacing

--- a/less/index.less
+++ b/less/index.less
@@ -99,6 +99,17 @@ header {
 
 table, th, td {
 	border: 1px solid black;
+	width: 100%;
+	
+
+	table {
+		border-spacing: 5px;
+		table-layout: fixed;
+	}
+
+	th, td {
+		padding: 15px;
+	}
 }
 
 .end {
